2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>

	* trans.c (netfs_attempt_utimes): Adapt to ``struct stat'' changes.

2007-05-08  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* vga-support.c (vga_fini): Fix call to ioperm().
	* generic-speaker.c (generic_speaker_start): Call ioperm() on GNU Mach
	1 too.

2005-07-13  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* current-vcs.c (repeater_node): Set default.

2005-07-11  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* Makefile (modules): Add `current-vcs' and its rules.
	* console.c (console_current_id): New function.
	* input.h (console_current_id): New prototype.
	* trans.c (struct netnode): New member `symlink_path'.
	(console_demuxer): Handle case when node it anonymous.
	(netfs_S_io_select): Likewise.
	(netfs_S_io_read): Likewise.
	(netfs_S_io_write): Likewise.
	(netfs_report_access): Likewise.
	(netfs_attempt_mksymlink): Implement symlinks.
	(netfs_attempt_lookup): Likewise.
	(netfs_attempt_unlink): Likewise.
	(netfs_attempt_link): Likewise.
	(netfs_attempt_mkfile): Likewise.
	(netfs_attempt_readlink): Likewise.
	(netfs_get_dirents): Likewise.
	(netfs_create_consnode): Likewise.
	* trans.h (struct consnode): New members `readlink' and `mksymlink'.
	* current-vcs.c: New file.

2005-01-10  Alfred M. Szmidt  <ams@gnu.org>

	* console.c (consnode_path): Renamed to ...
	(console_node): ... this.  Updated all references.

2005-01-06  Marco Gerards  <metgerards@student.han.nl>

	* Makefile (SRCS): Add `trans.c'.
	(LCLHDRS): Add `mach-inputdev.h'.
	(HURDLIBS): Add `netfs', `fshelp' and `iohelp'.
	(modules): Add `pc_mouse'.
	(pc_kbd.so.$(hurd-version)): Add `kdioctlServer.o' and
	`kbd-repeat.c'.
	(pc_mouse.so.$(hurd-version)): New variable.
	* console.c: Include <trans.h>.
	(DEFAULT_CONSOLE_NODE): New macro.
	(saved_id, saved_cons, consnode_path): New variables.
	(console_move_mouse): New function.
	(console_switch_away): New function.
	(console_switch_back): Likewise.